<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

      <EditText
          android:id="@+id/etString"
          android:layout_width="295dp"
          android:layout_height="48dp"
          android:layout_marginStart="40dp"
          android:layout_marginEnd="40dp"
          android:autofillHints=""
          android:ems="10"
          android:hint="@string/enteredText"
          android:inputType="textPersonName"
          android:textColorHint="#757575" />

      <Button
          android:id="@+id/button4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="40dp"
          android:layout_marginTop="50dp"
          android:layout_marginEnd="40dp"
          android:onClick="onClick"
          android:text="@string/manipulate"
          tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

      <LinearLayout
          android:id="@+id/linearLayout2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="20dp"
          android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2_1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2_2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2_3" />

      </LinearLayout>

      <LinearLayout
          android:id="@+id/linearLayout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical">

        <TextView
            android:id="@+id/tvCons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtCons"
            android:textColorHint="#757575" />

        <TextView
            android:id="@+id/tvUpperCase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtUpperCase"
            android:textColorHint="#757575" />

        <TextView
            android:id="@+id/tvTotalVowels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/totalVowels"
            android:textColorHint="#757575" />

      </LinearLayout>
    </LinearLayout>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>