<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="40dp"
                android:text="@string/profile"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/myname"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etMyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#E8E5E5"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mycourse"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etMyCourse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_course"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#E8E5E5"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_section"
                android:text="@string/mysection"
                android:textColor="#000000"
                android:textColorHint="#E8E5E5"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etMySection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_section"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#E8E5E5"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="clickHere"
                android:text="@string/mybutton"
                tools:ignore="UsingOnClickInXml" />

            <TextView
                android:id="@+id/vtname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:gravity="center" />

            <TextView
                android:id="@+id/vtcourse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@+id/vtsection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>